--- a/frontend/src/assets/style/_main.scss
+++ b/frontend/src/assets/style/_main.scss
@@ -33,19 +33,21 @@ $height-normal: 450;
 body {
   font-family: $font-fire;
   font-style: normal;
+  height: 100%;
+}
+
+.layout {
+  display: grid;
+  grid-template-rows: auto 1fr auto;
 }
 
 /* Hamburger menu */
 .hamburger {
   cursor: pointer;
-  width: 24px;
-  height: 24px;
   transition: all 0.25s;
 
   &-top, &-middle, &-bottom {
     position: absolute;
-    top: 0;
-    left: 0;
     width: 24px;
     height: 2px;
     background: $color-primary;
@@ -53,18 +55,22 @@ body {
     transition: all 0.5s;
   }
 
+  &-top {
+    transform: translateY(-7px);
+  }
+
   &-middle {
-    transform: translateY(7px);
+    transform: translateY(0px);
   }
 
   &-bottom {
-    transform: translateY(14px);
+    transform: translateY(7px);
   }
 
   &.open {
 
     .hamburger-top {
-      transform: rotate(45deg) translateY(6px) translate(6px);
+      transform: rotate(45deg) translateY(0px) translate(0px);
     }
 
     .hamburger-middle {
@@ -72,7 +78,7 @@ body {
     }
 
     .hamburger-bottom {
-      transform: rotate(-45deg) translateY(6px) translate(-6px);
+      transform: rotate(-45deg) translateY(0px) translate(0px);
     }
   }
 }
@@ -109,3 +115,45 @@ body {
     height: 200px;
   }
 }
+
+.vector {
+  position: absolute;
+  width: 8.5px;
+  height: 6px;
+  left: 160px;
+  top: 148.65px;
+
+  background: #FFFFFF;
+  transform: rotate(180deg);
+}
+
+.close-card {
+  display: none;
+}
+
+.coding {
+  &.fix-font {
+    span, code {
+      font-size: 11px !important;
+    }
+  }
+
+  span {
+    width: 100%;
+    height: 100%;
+    background: #011221 !important;
+    margin-top: 15px;
+    padding-bottom: 15px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .coding {
+    code {
+      font-size: 12px !important;
+    }
+  }
+}
+
+
+
