--- a/frontend/src/assets/style/_main.scss
+++ b/frontend/src/assets/style/_main.scss
@@ -85,6 +85,13 @@ body {
 
 
 /* -------------- Default ----------------- */
+input[name="react-console-emulator__input"] {
+  margin: 3px !important;
+}
+
+div[name="react-console-emulator"] {
+  height: 100%;
+}
 
 .text {
   color: $font-color-pre;
