--- a/src/assets/style/_main.scss
+++ b/src/assets/style/_main.scss
@@ -91,6 +91,7 @@ input[name="react-console-emulator__input"] {
 
 div[name="react-console-emulator"] {
   height: 100%;
+  width: 100%;
 }
 
 .text {
